Remove gc logging